--- a/01-base/src/app/app.component.html
+++ b/01-base/src/app/app.component.html
@@ -3,6 +3,9 @@
 <hr>
 
 <p>Bienvenido a Angular</p>
-<app-counter></app-counter>
+<!-- <app-counter></app-counter> -->
+<!-- <app-heroes-hero></app-heroes-hero> -->
+
+<app-heroes-list></app-heroes-list>
 
 
