--- a/01-base/src/app/dbz/pages/main-page.component.html
+++ b/01-base/src/app/dbz/pages/main-page.component.html
@@ -4,9 +4,10 @@
 
 <div class="row">
   <div class="col">
-    <dbz-dbz-list></dbz-dbz-list>
+    <dbz-dbz-list [characterList]="characters"></dbz-dbz-list>
   </div>
   <div class="col">
+
     <dbz-add-character></dbz-add-character>
   </div>
 </div>
