--- a/01-base/src/app/dbz/components/list/list.component.html
+++ b/01-base/src/app/dbz/components/list/list.component.html
@@ -10,11 +10,15 @@
 
 
     class="list-group-item"
+    [ngClass]="{
+      'list-group-item-dark' : isLast,
+      'list-group-item-primary' : isEven
+    }"
     >
     <span class="text-primary">{{i}}.</span>
     <span>{{character.name}} - </span>
     <strong>Power :</strong>
     <span>{{character.power}}</span>
-    
+
   </li>
 </ul>
