--- a/01-base/src/app/dbz/components/add-character/add-character.component.html
+++ b/01-base/src/app/dbz/components/add-character/add-character.component.html
@@ -1,9 +1,17 @@
 <h4>Agregar Personaje</h4>
-<form action="">
-  <input type="text" class="form-control mb-2" placeholder="Nombre">
-  <input type="number" class="form-control mb-2" placeholder="Poder">
+<form action="" (ngSubmit)="emitCharacter()">
+  <input
+    type="text" [(ngModel)]="character.name" class="form-control
+    mb-2"
+    name="name"  placeholder="Nombre">
+
+  <input type="number" [(ngModel)]="character.power"
+  name="power" class="form-control mb-2" placeholder="Poder">
 
   <button type="submit" class="btn btn-primary">
     Agregar
   </button>
+
+
+  <!-- <pre>{{character | json}}</pre> -->
 </form>
