--- a/01-base/src/app/dbz/components/list/list.component.html
+++ b/01-base/src/app/dbz/components/list/list.component.html
@@ -23,6 +23,6 @@
 
     </div>
 
-    <button class="btn btn-danger" (click)="onDeleteCharacter(i)">X</button>
+    <button class="btn btn-danger" (click)="onDeleteCharacter(character.id)">X</button>
   </li>
 </ul>
