--- a/01-base/src/app/dbz/pages/main-page.component.html
+++ b/01-base/src/app/dbz/pages/main-page.component.html
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col">
-    <dbz-dbz-list [characterList]="characters" (onDeleteId)="onDeleteId($event)"></dbz-dbz-list>
+    <dbz-dbz-list [characterList]="characters" (onDeleteId)="onDeleteCharacter($event)"></dbz-dbz-list>
   </div>
   <div class="col">
 
