--- a/07-gifs-app/src/app/gifs/components/card-list/card-list.component.html
+++ b/07-gifs-app/src/app/gifs/components/card-list/card-list.component.html
@@ -1,20 +1,11 @@
 <div class="row">
 
-  <div *ngFor="let gif of gifs" class="col-md-3 col-sm-6">
-    <div class="card mb-2 text-center bg-dark">
-      <!-- TODO: Crear Imagen -->
-      <img
-        [src]="gif.images.downsized_medium.url"
-        [alt]="gif.title"
-        class="card-img-top"
-      >
+  <gifs-card
+  class="col-md-3 col-sm-6"
+  *ngFor="let gif of gifs"
+  [gif] = "gif"
 
-      <div class="card-body text-light">
-        <p class="card-text d-">
-          {{gif.title}}
-        </p>
-      </div>
-    </div>
-  </div>
+  >
+  </gifs-card>
 
 </div>
