--- a/08-countryApp/src/app/app.component.html
+++ b/08-countryApp/src/app/app.component.html
@@ -7,7 +7,8 @@
 
   <div class="col">
     <!-- nuestras paginas -->
-    router
+    <!-- <shared-home-page></shared-home-page> -->
+    <router-outlet></router-outlet>
   </div>
 
 </div>
